--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "deploy": "gh-pages -d dist",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
-  "homepage": " https://github.com/M75v1/Follow-.git",
+  "homepage": "https://m75v1.github.io/foloow/",
   "dependencies": {
     "lucide-react": "^0.292.0",
     "react": "^18.3.1",
